0.25c
0.25c